# TextEncoder

./: CMakeLists.txt  README.md
include/: AtbashCipher.h  CaesarCipher.h  CipherFactory.h  EncryptionService.h  FileProcessor.h  IEncryptionAlgorithm.h  MainWindow.h  PlayfairCipher.h  VigenereCipher.h  XORCipher.h
resources/: MainWindow.ui
src/: AtbashCipher.cpp  CaesarCipher.cpp  CipherFactory.cpp  EncryptionService.cpp  FileProcessor.cpp  MainWindow.cpp  PlayfairCipher.cpp  VigenereCipher.cpp  XORCipher.cpp
